Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76521

Building qtbase with zstd breaks various existing codebases, including qtscxml

XMLWordPrintable

    • 8be5e49379fa8c0f1e1e41ff4bce91e30699b352 (qt/qtscxml/5.13)

      In qtscxml, building the examples fails with

      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o: in function `QQmlPrivate::QQmlElement<CalculatorStateMachine>::QQmlElement()':
      [ 117s] /usr/include/qt5/QtQml/qqmlprivate.h:103: undefined reference to `CalculatorStateMachine::CalculatorStateMachine(QObject*)'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o: in function `QQmlPrivate::QQmlElement<CalculatorStateMachine>::~QQmlElement()':
      [ 117s] /usr/include/qt5/QtQml/qqmlprivate.h:108: undefined reference to `CalculatorStateMachine::~CalculatorStateMachine()'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o: in function `QQmlPrivate::QQmlElement<CalculatorStateMachine>::~QQmlElement()':
      [ 117s] /usr/include/qt5/QtQml/qqmlprivate.h:108: undefined reference to `CalculatorStateMachine::~CalculatorStateMachine()'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o: in function `int qRegisterNormalizedMetaType<CalculatorStateMachine*>(QByteArray const&, CalculatorStateMachine**, QtPrivate::MetaTypeDefinedHelper<CalculatorStateMachine*, QMetaTypeId2<CalculatorStateMachine*>::Defined&&(!QMetaTypeId2<CalculatorStateMachine*>::IsBuiltIn)>::DefinedType)':
      [ 117s] /usr/include/qt5/QtCore/qmetatype.h:1748: undefined reference to `CalculatorStateMachine::staticMetaObject'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o: in function `int qmlRegisterType<CalculatorStateMachine>(char const*, int, int, char const*)':
      [ 117s] /usr/include/qt5/QtQml/qqml.h:285: undefined reference to `CalculatorStateMachine::staticMetaObject'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: /usr/include/qt5/QtQml/qqml.h:287: undefined reference to `CalculatorStateMachine::staticMetaObject'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o:(.data.rel.ro._ZTIN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE[_ZTIN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE]+0x10): undefined reference to `typeinfo for CalculatorStateMachine'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o:(.data.rel.ro._ZTVN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE[_ZTVN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE]+0x10): undefined reference to `CalculatorStateMachine::metaObject() const'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o:(.data.rel.ro._ZTVN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE[_ZTVN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE]+0x18): undefined reference to `CalculatorStateMachine::qt_metacast(char const*)'
      [ 117s] /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: .obj/calculator-qml.o:(.data.rel.ro._ZTVN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE[_ZTVN11QQmlPrivate11QQmlElementI22CalculatorStateMachineEE]+0x20): undefined reference to `CalculatorStateMachine::qt_metacall(QMetaObject::Call, int, void**)'
      [ 117s] collect2: error: ld returned 1 exit status
      

      The failure started happening after enabling zstd support in qtbase and indeed, forcing rcc to use --compress-algo zlib makes it work again.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            vogtinator Fabian Vogt
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes