qscxmlc: Don't compress the templates

Those files are small, so we may as well not bother.

Fixes: QTBUG-76521
Change-Id: Ief874765cd7b43798de3fffd15a9f511bc9c723a
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>